--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Unofficial GN Download Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>gn-builds: Unofficial GN Download Page</title>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js">
     </script>
     <link rel="import" href="bower_components/iron-ajax/iron-ajax.html"/>
@@ -18,7 +19,7 @@
 
   <body>
     <paper-toolbar>
-      <div class="title">GN Downloads</div>
+      <div class="title">GN Builds</div>
     </paper-toolbar>
 
     <br/>
@@ -28,6 +29,13 @@
     <binary-link platform="linux64"></binary-link>
     <binary-link platform="mac"></binary-link>
     <binary-link platform="win" suffix=".exe"></binary-link>
+
+    <h4>About</h4>
+
+    <p>
+      This is just a page I wrote to always publish the LATEST version of the GN
+      binaries.
+    </p>
 
   </body>
 </html>
